[tool.poetry]
name = "libsimba"
version = "0.1.8"
description = "libsimba is a library simplifying the use of SIMBAChain Blocks APIs."
authors = [
    "SIMBA Chain Inc."
]

packages = [
    { include = "libsimba" }
]

[tool.poetry.dependencies]
python = " >=3.9,<4.0"
httpx = "^0.23.0"
pydantic = { extras = ["dotenv"], version = "1.10.2" }

[tool.poetry.dev-dependencies]
Sphinx = "5.1.1"
sphinx-rtd-theme = "^1.0.0"
twine = "^4.0.1"
myst-parser = "^0.18.0"
pytest = "^7.1.3"
respx = "0.20.0"
black = "22.8.0"
isort = "5.10.1"
taskipy = "1.10.3"
coverage = "6.4.4"

[tool.isort]
profile="black"
atomic=true
include_trailing_comma=true
lines_after_imports=2
lines_between_types=1
use_parentheses=true
src_paths=["config", "tests"]
skip_glob="*/setup.py"
filter_files=true
known_first_party="poetry"

[tool.taskipy.tasks]
isort = { cmd = "isort libsimba", help = "Sort imports" }
format = { cmd = "black libsimba", help = "Run black code formatting" }
tests = { cmd = "pytest --pyargs tests --junitxml=junit.xml --verbose", help = "Run tests" }

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

