[project]
name = "libsimba"
version = "1.8.0"
description = "libsimba is a library simplifying the use of SIMBAChain Blocks APIs."
authors = [
    { name = "SIMBA Chain Inc." }
]
readme = "README.md"
packages = [
    { include = "libsimba" }
]
license = "MIT"

[project.urls]
homepage = "https://github.com/SIMBAChain/libsimba"
repository = "https://github.com/SIMBAChain/libsimba"
documentation = "https://simbachain.github.io/libsimba/"

[tool.poetry.dependencies]
python = ">=3.9,<4.0"
httpx = ">=0.26.0"
pydantic = ">=2.1.1,<=3"
pydantic-settings = ">=2.1.0,<3"

[tool.poetry.group.dev.dependencies]
Sphinx = "^6.1.3"
pydata-sphinx-theme = "^0.15.2"
twine = "^4.0.1"
myst-parser = "^2.0.0"
pytest = "^8.0.0"
respx = "^0.20.2"
black = "^24.1.1"
isort = "^5.13.2"
taskipy = "^1.12.2"
coverage = "^7.4.1"

[tool.isort]
profile="black"
atomic=true
include_trailing_comma=true
lines_after_imports=2
lines_between_types=1
use_parentheses=true
src_paths=["config", "tests"]
skip_glob="*/setup.py"
filter_files=true
known_first_party="poetry"

[tool.pytest.ini_options]
markers = [
    "unit: do not require an external service",
]

[tool.taskipy.tasks]
isort = { cmd = "isort libsimba", help = "Sort imports" }
format = { cmd = "black libsimba", help = "Run black code formatting" }
tests = { cmd = "pytest --pyargs tests -m unit --junitxml=junit.xml --verbose", help = "Run tests" }
live_async = { cmd = "pytest --pyargs tests/test_live_async.py --junitxml=junit.xml --verbose", help = "Run live async tests" }
live_sync = { cmd = "pytest --pyargs tests/test_live_sync.py --junitxml=junit.xml --verbose", help = "Run live async tests" }

[build-system]
requires = ["poetry-core>=2.0.0", "setuptools"]
build-backend = "poetry.core.masonry.api"

